--- a/hobby.html
+++ b/hobby.html
@@ -14,7 +14,7 @@
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-      <marquee style="color:rgb(255, 0, 0);">Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+      <marquee style="color:rgb(255, 0, 0);">Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
      <marquee direction="right" behaviour="scroll"></marquee></li>
  </ul>
  <br>
@@ -31,12 +31,11 @@
  </div>
  <br>
  <br>
- <div class="werk">
+ <div class="PS4">
    <center>
-   <div class="werk">
-      <h1 style="color: orange;">Ik werk in een kleine aziatische winkel genaamd Raja Cash and Carry. Ik werk hier sinds 2022. Ik werk hier niet per se voor het geld, maar om ervaring op te bouwen en ook om mijn eigen taal beter te begrijpen/leren.</h1>
+   <div class="PS4">
+      <h1 style="color: rgb(0, 0, 255);">Naast sporten hou ik ook van gamen. Ik game vaak met vrienden doordeweeks en in het weekend en heb dan veel lol.</h1>
       <img class="img_deg" src="PS4.jpg" alt="PS4 Pro" style="width:500px;height:300px;">
-      <h1 style="color: orange;">Aaltje Noordewierlaan 54, 2324 KT Leiden</h1>
    </center>
    </div>
    </div>
