--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <link rel="stylesheet" href=opmaak.css></link>
 <title>SanJ Hoofdpagina</title>
    </head> 
-   <link rel="icon" type="image/x-icon" href="favicon.ico">
+   <link rel="icon" type="image/x-icon" href="Logo.png">
 <body>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
  <marquee style="color:rgb(255, 0, 0);">Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
@@ -17,7 +17,7 @@
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-      <marquee style="color:rgb(255, 0, 0);">Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+      <marquee style="color:rgb(255, 0, 0);">Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
      <marquee direction="right" behaviour="scroll"></marquee>
    <br>
    <br>
