--- a/vrienden.html
+++ b/vrienden.html
@@ -26,18 +26,18 @@
 </center>
 </style>
 </style>
-<div class="school">
+<div class="Floris">
 <center>
-<div class="school">
-   <h1 style="color: red;">dit is mijn school</h1>
-  <a href="https://www.vlietlandcollege.nl/Home"> <img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;"> </a>
+<div class="Floris">
+   <a style="color:  rgb(0, 51, 255);" href="https://flriis.github.io/">flriis</a>
+   <h2 style="color: blue;">Ik ken Floris al sinds de 1e. Ik ben goede vrienden men hem en zit bijna altijd naast hem. Soms is hij een beetje irritant maar meestal heb ik veel lol met hem</h2>
    <br>
 </center>
 </div>
 
 </div>
 <h2 style="color: red;">Ik zit nu (2024) in havo 4 met het profiel N&T. Ik heb veel nieuwe vrienden gemaakt die nu ook hun eigen sites hebben. hieronder vind je een link naar hun website. Nu alleen nog raden wie het zijn!
-<a style="color:  rgb(0, 51, 255);" href="https://flriis.github.io/">flriis</a>
+
 <a style="color:  rgb(0, 51, 255);" href="https://theprogrammerdr.github.io/">The programmerdr</a>
 <a style="color:  rgb(0, 51, 255);" href="https://tctam.nl/">Tc_tam</a>
 <a style="color:  rgb(0, 51, 255);" href="https://tnobelen.github.io/">TNobelen</a>
